tests/ui/derive_union.stderr
error: FunctionCall derive does not support unions
 --> tests/ui/derive_union.rs:4:1
  |
4 | union Bad {
  | ^^^^^
